# CodeHive

./: .gitignore  LICENSE  README.md  pyproject.toml
src/codehive/: __init__.py  analyzers.py  cli.py  llm.py  messaging.py  models.py  orchestrator.py  pool.py  refactor_engine.py  sandbox.py  stats.py  training_sources.py
src/codehive/agents/: __init__.py  directory_agent.py  root_agent.py
